# qimq

./: CMakeLists.txt  README.md  broker.hpp  consts.h  consumer.hpp  entity.hpp  file_storage.hpp  main.cpp  mem_storage.hpp  producer.hpp  qimq.vcxproj  qimq.vcxproj.filters  storage.hpp
doc/: design_draft.md
test/: CMakeLists.txt
test/test_pull_ack/: main.cpp  test_pull_ack.vcxproj
test/test_pull_msg/: CMakeLists.txt  main.cpp
test/test_send_msg/: CMakeLists.txt  main.cpp
